--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
     "chess.js": "^1.4.0",
     "ws": "^8.13.0",
     "twilio": "^4.19.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "uuid": "^9.0.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
+    "helmet": "^7.1.0",
+    "rate-limiter-flexible": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3"
   },
   "scripts": {
     "start": "node server.cjs"
