--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3"
   },
   "scripts": {
-    "start": "node server.cjs"
+    "start": "node server.cjs",
+    "build": "echo 'No build step required'"
   }
 }
